welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:10: error: '(' expected but identifier found.
  if A >= 3:
     ^Poucet:16: error: illegal start of simple expression
}(!estSurJaune()) 
^Poucet:16: error: 'while' expected but '(' found.
}(!estSurJaune()) 
 ^Poucet:18: error: '(' expected but '}' found.
	}
        ^